# Scientific-Programming

./: .gitignore  .gitmodules  CMakeLists.txt
CPPAdvanced(CPP11&CPP17)/ClockAndTimer/: CMakeLists.txt
CPPAdvanced(CPP11&CPP17)/Functions/: CMakeLists.txt
CPPAdvanced(CPP11&CPP17)/Initializer/: CMakeLists.txt
CPPAdvanced(CPP11&CPP17)/Literals/: main.cpp
CPPAdvanced(CPP11&CPP17)/Pointers/: CMakeLists.txt  main.cpp
CPPAdvanced(CPP11&CPP17)/RValue/: main.cpp
CPPAdvanced(CPP11&CPP17)/Regular_Expressions/: main.cpp
CPPAdvanced(CPP11&CPP17)/Streams/: MyLog.txt
CPPAdvanced(CPP11&CPP17)/Strings/: CMakeLists.txt  main.cpp
CPPStandardTemplateLibrary_STL/Iterators/: CMakeLists.txt  main.cpp
CPPStandardTemplateLibrary_STL/Non-Modifying_Algorithms/: CMakeLists.txt  main.cpp
CPPStandardTemplateLibrary_STL/Unordered_Associative/: CMakeLists.txt  main.cpp
CPP_Advanced(CPP11&CPP17)/RValue/: CMakeLists.txt
CPP_Advanced(CPP11&CPP17)/Streams/: main.cpp
CPP_Advanced(CPP11&CPP17)/StructVsClass/: CMakeLists.txt  main.cpp
CPP_Advanced/ClockAndTimer/: CMakeLists.txt  main.cpp
CPP_Advanced/Functions/: CMakeLists.txt  main.cpp
CPP_Advanced/Initializer/: CMakeLists.txt  main.cpp
CPP_Advanced/Literals/: CMakeLists.txt
CPP_Advanced/Pointers/: CMakeLists.txt
CPP_Advanced/RValue/: CMakeLists.txt
CPP_Advanced/Regular_Expressions/: CMakeLists.txt
CPP_Advanced/Streams/: CMakeLists.txt  MyLog.txt
CPP_Advanced/Strings/: CMakeLists.txt
CPP_Advanced/StructVsClass/: CMakeLists.txt
CPP_CUDA/: CMakeLists.txt
CPP_CUDA/SumTwoBigArrays/: CMakeLists.txt  main.cpp  main.cu
CPP_Concurrency(Threads)/RaceAndMutex/: CMakeLists.txt
CPP_Concurrency(Threads)/Threads/: CMakeLists.txt
CPP_MPI/: CMakeLists.txt
CPP_MPI/HelloWorld/: CMakeLists.txt  main.cpp
CPP_OpenMP/: CMakeLists.txt
common/: CMakeLists.txt
common/Benchmark/: CMakeLists.txt
common/Benchmark/include/: Benchmark.hpp
common/Benchmark/src/: Benchmark.cpp
(+29 files in other folders)
